# microstrain_mip_node

./: CMakeLists.txt  README.md  mainpage.dox  manifest.xml
include/microstrain_mip_node/: 3dmgx3.h
src/: 3dmgx3.cpp  CMakeLists.txt  driver.cpp  imu_node.cpp  sample_driver.cpp
src/MIP_SDK/: CMakeLists.txt  GX3_35_Test.cpp  byteswap_utilities.cpp  mip.cpp  mip_sdk_3dm.cpp  mip_sdk_ahrs.cpp  mip_sdk_base.cpp  mip_sdk_gps.cpp  mip_sdk_interface.cpp  mip_sdk_nav.cpp  mip_sdk_system.cpp  mip_sdk_user_functions.cpp  ring_buffer.cpp
